--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,10 @@ jobs:
           curl http://127.0.0.1:5000/apidocs/swagger.json -o openapi.json
           mv openapi.json openapi.yaml
 
+      # Установка пакета для конвертации YAML в JSON
+      - name: Install yamljs for YAML to JSON conversion
+        run: npm install -g yamljs
+
       # Преобразуем YAML в JSON
       - name: Convert YAML to JSON
         run: |
@@ -49,3 +53,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs
+
