--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,71 +1,119 @@
-name: Deploy API Documentations
+name: CI Workflow
 
 on:
   push:
     branches:
-      - main  # Пайплайн запускается при push в ветку main
+      - main
 
 jobs:
-  deploy:
+  security_check:
+    name: Security Check with Bandit
     runs-on: ubuntu-latest
 
     steps:
-      # Шаг 1: Checkout репозитория
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Check out the code
+        uses: actions/checkout@v2
 
-      # Шаг 2: Установка Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
-      # Шаг 3: Установка зависимостей Python
-      - name: Install Python dependencies
+      - name: Install Bandit
         run: |
-          python -m pip install --upgrade pip
+          pip install bandit
+
+      - name: Run Bandit Security Scan
+        run: |
+          bandit -r ./ -x tests --output bandit_report.html
+          
+      - name: Upload Bandit Report as Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: bandit-report
+          path: bandit_report.html
+
+  openapi_generation:
+    name: Generate OpenAPI Documentation
+    runs-on: ubuntu-latest
+    needs: security_check
+
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Install Dependencies
+        run: |
           pip install flask flasgger
 
-      # Шаг 4: Установка Node.js
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Generate OpenAPI Specification (openapi.yaml)
+        run: |
+          python -c "
+import sys
+from flasgger import Swagger
+from app import app
+
+swagger = Swagger(app)
+with open('openapi.yaml', 'w') as f:
+    f.write(swagger.spec.to_yaml())
+"
+        env:
+          FLASK_APP: app.py  # Убедитесь, что указываете правильный файл Flask-приложения
+
+      - name: Upload OpenAPI Spec as Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: openapi-spec
+          path: openapi.yaml
+
+  redoc_generation:
+    name: Generate ReDoc Page
+    runs-on: ubuntu-latest
+    needs: openapi_generation
+
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v2
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      # Шаг 5: Установка Redocly CLI
-      - name: Install Redocly CLI
+      - name: Install redocly
         run: |
-          npm install -g @redocly/cli
+          npm install -g @redocly/openapi-cli
 
-      # Шаг 6: Запуск Flask-приложения и генерация OpenAPI спецификации
-      - name: Run Flask app and generate OpenAPI spec
+      - name: Generate ReDoc HTML
         run: |
-          # Запуск Flask приложения в фоновом режиме
-          nohup python app.py &
-          sleep 5  # Даем серверу время на старт
+          redocly build-docs openapi.yaml --output docs/index.html
 
-          # Извлекаем swagger.json из работающего Flask приложения
-          curl http://127.0.0.1:5000/apidocs/swagger.json -o openapi.json
-          
-          # Конвертируем JSON в YAML
-          npx js-yaml openapi.json > openapi.yaml
+  deploy_to_pages:
+    name: Deploy Documentation to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: redoc_generation
 
-      # Шаг 7: Проверка спецификации OpenAPI
-      - name: Validate OpenAPI spec
-        run: |
-          redocly lint openapi.yaml
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v2
 
-      # Шаг 8: Генерация документации с использованием Redocly
-      - name: Generate ReDoc documentation
-        run: |
-          redocly build-docs openapi.yaml --output ./docs/index.html
-
-      # Шаг 9: Публикация документации на GitHub Pages
-      - name: Deploy to GitHub Pages
+      - name: Install GitHub Pages Action
         uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs  # Публикуем сгенерированную документацию на GitHub Pages
+
+      - name: Deploy to GitHub Pages
+        run: |
+          mv docs/index.html ./docs/
+          git add -A
+          git commit -m "Deploy ReDoc Documentation"
+          git push --force
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
 
 
