--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI Workflow
 on:
   push:
     branches:
-      - main
+      - main  # workflow срабатывает на пуш в ветку main
 
 jobs:
   security_check:
@@ -12,55 +12,55 @@ jobs:
 
     steps:
       - name: Check out the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2  # Проверяем код из репозитория
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.9'  # Указываем нужную версию Python
 
       - name: Install Bandit
         run: |
-          pip install bandit
+          pip install bandit  # Устанавливаем Bandit для проверки безопасности
 
       - name: Run Bandit Security Scan
         run: |
-          bandit -r ./ -x tests --output bandit_report.html
-          
+          bandit -r ./ -x tests --output bandit_report.html  # Запуск Bandit и сохранение отчета
+
       - name: Upload Bandit Report as Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: bandit-report
-          path: bandit_report.html
+          name: bandit-report  # Загрузка отчета Bandit как артефакт
+          path: bandit_report.html  # Путь к отчету Bandit
 
   openapi_generation:
     name: Generate OpenAPI Documentation
     runs-on: ubuntu-latest
-    needs: security_check
+    needs: security_check  # Этот шаг зависит от завершения предыдущего шага
 
     steps:
       - name: Check out the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2  # Проверяем код
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.9'  # Указываем нужную версию Python
 
       - name: Install Dependencies
         run: |
-          pip install flask flasgger
+          pip install flask flasgger  # Устанавливаем Flask и Flasgger для работы с OpenAPI
 
       - name: Generate OpenAPI Specification (openapi.yaml)
         run: |
           python -c "
 import sys
 from flasgger import Swagger
-from app import app
+from app import app  # Здесь должен быть импорт вашего приложения Flask
 
-swagger = Swagger(app)
+swagger = Swagger(app)  # Инициализация Swagger с приложением Flask
 with open('openapi.yaml', 'w') as f:
-    f.write(swagger.spec.to_yaml())
+    f.write(swagger.spec.to_yaml())  # Запись спецификации OpenAPI в файл openapi.yaml
 "
         env:
           FLASK_APP: app.py  # Убедитесь, что указываете правильный файл Flask-приложения
@@ -68,51 +68,53 @@ with open('openapi.yaml', 'w') as f:
       - name: Upload OpenAPI Spec as Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: openapi-spec
-          path: openapi.yaml
+          name: openapi-spec  # Загрузка OpenAPI спецификации как артефакт
+          path: openapi.yaml  # Путь к сгенерированному файлу openapi.yaml
 
   redoc_generation:
     name: Generate ReDoc Page
     runs-on: ubuntu-latest
-    needs: openapi_generation
+    needs: openapi_generation  # Этот шаг зависит от завершения предыдущего шага
 
     steps:
       - name: Check out the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2  # Проверяем код
 
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '18'  # Устанавливаем Node.js для работы с redocly
 
       - name: Install redocly
         run: |
-          npm install -g @redocly/openapi-cli
+          npm install -g @redocly/openapi-cli  # Устанавливаем redocly
 
       - name: Generate ReDoc HTML
         run: |
-          redocly build-docs openapi.yaml --output docs/index.html
+          redocly build-docs openapi.yaml --output docs/index.html  # Генерируем страницу документации ReDoc
 
   deploy_to_pages:
     name: Deploy Documentation to GitHub Pages
     runs-on: ubuntu-latest
-    needs: redoc_generation
+    needs: redoc_generation  # Этот шаг зависит от завершения предыдущего шага
 
     steps:
       - name: Check out the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2  # Проверяем код
 
       - name: Install GitHub Pages Action
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v3  # Используем экшн для деплоя на GitHub Pages
 
       - name: Deploy to GitHub Pages
         run: |
-          mv docs/index.html ./docs/
-          git add -A
-          git commit -m "Deploy ReDoc Documentation"
-          git push --force
+          mv docs/index.html ./docs/  # Перемещаем сгенерированную страницу в папку docs
+          git add -A  # Добавляем изменения в git
+          git commit -m "Deploy ReDoc Documentation"  # Коммитим изменения
+          git push --force  # Принудительно пушим на GitHub Pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Используем токен для деплоя
+
+
 
 
 
