--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'  # Устанавливаем Node.js для работы с redocly)
+          node-version: '18'  # Устанавливаем Node.js для работы с redocly
 
       - name: Install redocly
         run: |
