--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,11 +85,11 @@ jobs:
 
       - name: Install redocly
         run: |
-          npm install -g @redocly/openapi-cli  # Устанавливаем redocly
+          npm install @redocly/openapi-cli  # Устанавливаем redocly (локально)
 
       - name: Generate ReDoc HTML
         run: |
-          redocly build-docs openapi.yaml --output docs/index.html  # Генерируем страницу документации ReDoc
+          npx redocly build-docs openapi.yaml --output docs/index.html  # Генерируем страницу документации ReDoc с помощью npx
 
   deploy_to_pages:
     name: Deploy Documentation to GitHub Pages
@@ -105,6 +105,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs  # Директория, куда загружается документация
+
 
 
 
