--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,13 +83,13 @@ jobs:
         with:
           node-version: '18'  # Устанавливаем Node.js для работы с redocly
 
-      - name: Install redocly
+      - name: Install @redocly/openapi-cli
         run: |
-          npm install @redocly/openapi-cli  # Устанавливаем redocly (локально)
+          npm install @redocly/openapi-cli  # Устанавливаем правильный пакет для redocly
 
       - name: Generate ReDoc HTML
         run: |
-          npx redocly build-docs openapi.yaml --output docs/index.html  # Генерируем страницу документации ReDoc с помощью npx
+          npx @redocly/openapi-cli build-docs openapi.yaml --output docs/index.html  # Генерируем страницу документации ReDoc с помощью npx
 
   deploy_to_pages:
     name: Deploy Documentation to GitHub Pages
@@ -105,6 +105,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs  # Директория, куда загружается документация
+
 
 
 
