--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
 
       - name: Generate ReDoc HTML
         run: |
-          npx @redocly/openapi-cli build-docs openapi.yaml --output docs/index.html  # Генерируем страницу документации ReDoc с помощью npx
+          npx @redocly/openapi-cli build-docs openapi.yaml -o docs/index.html  # Генерируем страницу документации ReDoc с помощью npx
 
   deploy_to_pages:
     name: Deploy Documentation to GitHub Pages
@@ -105,6 +105,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs  # Директория, куда загружается документация
+
 
 
 
