--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,11 @@ jobs:
           flask run --host=0.0.0.0 --port=5000 &  # Запускаем сервер в фоне
 
       - name: Wait for Flask to start
-        run: sleep 10  # Ждем 10 секунд для старта Flask-сервера
+        run: sleep 15  # Увеличиваем время ожидания до 15 секунд для старта Flask-сервера
+
+      - name: Check if Flask is running
+        run: |
+          curl --silent --fail http://127.0.0.1:5000/ || exit 1  # Проверяем, что сервер доступен
 
       - name: Generate OpenAPI Specification (openapi.yaml)
         run: |
@@ -105,6 +109,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs  # Директория, куда загружается документация
+
 
 
 
