--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,10 +54,10 @@ jobs:
       - name: Run Flask application in background
         run: |
           export FLASK_APP=app.py  # Указываем правильный файл Flask-приложения
-          flask run --host=0.0.0.0 --port=5000 &  # Запускаем сервер в фоне
+          flask run --host=0.0.0.0 --port=5000 --debug &  # Запускаем сервер в фоне с флагом debug
 
       - name: Wait for Flask to start
-        run: sleep 15  # Увеличиваем время ожидания до 15 секунд для старта Flask-сервера
+        run: sleep 30  # Увеличиваем время ожидания до 30 секунд
 
       - name: Check if Flask is running
         run: |
@@ -109,6 +109,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs  # Директория, куда загружается документация
+
 
 
 
