--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,32 @@ jobs:
 
       - name: Install Node.js
         uses: actions/setup-node@v4
+        with:
+          node-version: '18'  # Устанавливаем Node.js для работы с Redocly
+
+      - name: Install Redocly CLI
+        run: |
+          npm install -g @redocly/cli@latest  # Устанавливаем последнюю версию Redocly CLI
+
+      - name: Generate ReDoc HTML
+        run: |
+          redocly build-docs openapi.yaml -o docs/index.html  # Генерируем страницу документации ReDoc
+
+  deploy_to_pages:
+    name: Deploy Documentation to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: redoc_generation  # Этот шаг зависит от завершения предыдущего шага
+
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v4  # Проверяем код
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs  # Директория, куда загружается документация
+
      
 
 
