--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,10 @@ jobs:
         run: |
           curl http://localhost:5000/swagger.json -o openapi.yaml  # Получаем OpenAPI спецификацию
 
+      - name: Check if openapi.yaml exists
+        run: |
+          ls -la openapi.yaml  # Проверяем, существует ли файл openapi.yaml
+
       - name: Upload OpenAPI Spec as Artifact
         uses: actions/upload-artifact@v4
         with:
@@ -81,6 +85,10 @@ jobs:
         run: |
           npm install -g @redocly/cli@latest  # Устанавливаем redocly
 
+      - name: Check if openapi.yaml exists
+        run: |
+          ls -la openapi.yaml  # Проверяем, что файл openapi.yaml существует перед генерацией
+
       - name: Generate ReDoc HTML
         run: |
           redocly build-docs openapi.yaml --output docs/index.html  # Генерируем страницу документации ReDoc
@@ -99,6 +107,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs  # Директория, куда загружается документация
+
 
 
 
