--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
           flask run --host=0.0.0.0 --port=5000 --debug &  # Запускаем сервер в фоне с флагом debug
 
       - name: Wait for Flask to start
-        run: sleep 20  # Ждем 20 секунд, чтобы сервер успел стартовать
+        run: sleep 30  # Увеличиваем время ожидания, чтобы сервер успел запуститься
 
       - name: Generate OpenAPI Specification (openapi.yaml)
         run: |
@@ -107,6 +107,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs  # Директория, куда загружается документация
+
 
 
 
